# Terminal

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/android/terminal/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/android/terminal/: TerminalView.java
app/src/test/java/com/android/terminal/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
